--- a/templates/default/libfaac-dev.list.erb
+++ b/templates/default/libfaac-dev.list.erb
@@ -1,4 +1,7 @@
-deb http://us.archive.ubuntu.com/ubuntu/ precise multiverse 
-deb-src http://us.archive.ubuntu.com/ubuntu/ precise multiverse 
-deb http://us.archive.ubuntu.com/ubuntu/ precise-updates multiverse 
-deb-src http://us.archive.ubuntu.com/ubuntu/ precise-updates multiverse
+deb http://archive.ubuntu.com/ubuntu precise multiverse
+deb-src http://archive.ubuntu.com/ubuntu precise multiverse
+deb http://archive.ubuntu.com/ubuntu precise-updates multiverse
+deb-src http://archive.ubuntu.com/ubuntu precise-updates multiverse
+
+deb http://archive.ubuntu.com/ubuntu precise-backports main restricted universe multiverse
+deb-src http://archive.ubuntu.com/ubuntu precise-backports main restricted universe multiverse
