--- a/templates/default/libfaac-dev.list.erb
+++ b/templates/default/libfaac-dev.list.erb
@@ -1,7 +1,7 @@
-deb http://archive.ubuntu.com/ubuntu precise multiverse
-deb-src http://archive.ubuntu.com/ubuntu precise multiverse
-deb http://archive.ubuntu.com/ubuntu precise-updates multiverse
-deb-src http://archive.ubuntu.com/ubuntu precise-updates multiverse
+deb http://eu-west-1.ec2.archive.ubuntu.com/ubuntu/ precise multiverse
+deb-src http://eu-west-1.ec2.archive.ubuntu.com/ubuntu/ precise multiverse
+deb http://eu-west-1.ec2.archive.ubuntu.com/ubuntu/ precise-updates multiverse
+deb-src http://eu-west-1.ec2.archive.ubuntu.com/ubuntu/ precise-updates multiverse
 
 deb http://archive.ubuntu.com/ubuntu precise-backports main restricted universe multiverse
 deb-src http://archive.ubuntu.com/ubuntu precise-backports main restricted universe multiverse
